# agent-newsletter

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  JOURNAL.md  PLAN.md  README.md  SPECS.md  TASKS.md  decisions_architecture.md  docker-compose.e2e.yml  docker-compose.yml
config/: digest_style.md  learned_preferences.md  settings.yaml  settings.yaml.example  sources.yaml  user_profile.md
config/e2e/: digest_style.md  learned_preferences.md  settings.yaml  sources.yaml  user_profile.md
config/prompts/: enrichment.md
hermes/: Dockerfile  SOUL.md  config.yaml  main.py  pyproject.toml  requirements.txt
hermes-stub/: Dockerfile  app.py
litellm/: config.yaml
migrations/: alembic.ini  env.py  script.py.mako
migrations/versions/: 001_initial_schema.py  002_app_settings.py  003_user_message_threading.py
newsletter-engine/: Dockerfile  config.py  entrypoint.sh  main.py  pyproject.toml  requirements.txt  scheduler.py
newsletter-engine/api/: dev_routes.py  routes.py
newsletter-engine/db/: models.py  session.py
newsletter-engine/gmail/: auth.py  client.py  factory.py  local_client.py  parser.py  poller.py
newsletter-engine/processing/: cleaner.py  enrichment.py  ingestion.py  state.py  whitelist.py
newsletter-engine/tests/: conftest.py  test_api.py  test_cleaner.py  test_dev_routes.py  test_email_factory.py  test_enrichment.py  test_local_email_client.py  test_parser.py  test_scheduler.py  test_whitelist.py
postgres/: init.sh
scripts/: e2e-local-mailbox.sh  litellm-init-keys.sh
