[project]
name = "hermes"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "anthropic==0.40.0",
    "psycopg2-binary==2.9.10",
    "sqlalchemy==2.0.36",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
]
