[project]
name = "newsletter-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "alembic==1.13.3",
    "sqlalchemy==2.0.36",
    "psycopg2-binary==2.9.10",
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "python-dotenv==1.0.1",
    "pydantic==2.9.2",
    "pydantic-settings==2.5.2",
    "anthropic==0.40.0",
    "google-api-python-client==2.151.0",
    "google-auth==2.35.0",
    "google-auth-oauthlib==1.2.1",
    "apscheduler==3.10.4",
    "beautifulsoup4==4.12.3",
    "lxml==5.3.0",
    "httpx==0.27.2",
    "pyyaml==6.0.2",
]

[dependency-groups]
dev = [
    "bandit>=1.9.4",
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.15.15",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.bandit]
exclude_dirs = [".venv", "tests"]
skips = ["B101"]
